--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
+    "native-base": "^2.4.4",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react-native": "0.55.4",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1"
   }
 }
