--- a/app.json
+++ b/app.json
@@ -1,5 +1,10 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "sdkVersion": "27.0.0",
+    "androidStatusBarColor": "#334393",
+    "androidStatusBar": {
+      	"barStyle": "light-content",
+      	"backgroundColor": "#334393"
+	}
   }
 }
